--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -50,7 +50,7 @@
 
 
 <div class="col-md-10"  style="padding-top: 5">
-<a href={{i.url}} style="color: grey; font-size: 125%; ">{{i.title}} {{i.score}}</a><br>
+<a href={{i.url}} style="color: grey; font-size: 125%; ">{{i.title}} </a><br>
 
 <span style="opacity: 0.7">Posted by <a style="color: grey" href="/profile/{{i.posted_by.userprofile.all.0.uid}}">{{i.posted_by}}</a> {{i.created|timesince}} ago | <a href="/posts/{{i.post_url}}" style="color: grey">{{i.comments.all.count}} comments</a></span><br><br>
 
