--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,17 @@
 <html>
 <head>
 
+<title>
+
+{% if item %}
+
+{{item.title}}
+
+{% endif %}
+	
+
+</title>
+
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112548991-3"></script>
